fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,9 @@
 @tailwind utilities;
 
 @layer base {
-
-    body {
-        @apply bg-gray-base text-[rem] text-black-base dark:bg-gray-inverted dark:text-black-inverted font-normal;
-    }
+    /* body {
+        @apply bg-gray-base font-normal text-black-base dark:bg-gray-inverted dark:text-black-inverted;
+    } */
 }
 
 @layer utilities {
